--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/router": "~11.0.5",
     "@popperjs/core": "^2.6.0",
     "@types/jquery": "^3.5.5",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.15.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
